--- a/src/Components/Footer/index.scss
+++ b/src/Components/Footer/index.scss
@@ -34,17 +34,10 @@ $screen-xxl-xlarge-min: 3000px;
         display: flex;
         align-items: center;
         .footer_image{
-            width: 60%;
-            background: #fff;
-            text-align: center;
-            height: 30%;
-            justify-content: center;
-            align-items: center;
-            display: flex;
-            @include res_max($screen-sm-max){
-                height: 100%;
-            }
+            width: 90%;
             img{
+                padding: 10px;
+                background-color: #fff;
                 @include res_max($screen-lg-max) {
                     width: 70%;
                 }
