change image slider

--- a/src/Components/Accueil/index.scss
+++ b/src/Components/Accueil/index.scss
@@ -794,6 +794,8 @@ body{
                 }
                 img{
                     width: 85%;
+                    height: 370px;
+                    border-radius: 15%;
                 }
                 .text_slide{
                     position: relative;
